<resources>
    <string name="app_name">Bux Assignment</string>
    <string name="product_name">Product name:</string>
    <string name="apple">apple</string>
    <string name="current_price">Current price:</string>
    <string name="zero">0</string>
    <string name="product_identifier">Product identifier</string>
    <string name="price_difference">Price difference in %</string>
    <string name="closing_price">Closing price:</string>
    <string name="query_product">Query Product</string>
    <string name="input_title_text">Enter a product identifier:</string>
    <string name="loading">Loading...</string>
    <string name="error">Some error happened while getting the response.</string>
</resources>
